--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@
 }
 .wrapper_header{
     margin-top: 50px;
+    width: 100%;
     background-color: #121D39;
 }
 .logo1{
@@ -410,6 +411,55 @@ footer{
         margin-bottom: 133px;  
     }
     .elem2{
+        margin: 20px;
+        display: flex;
+        justify-content: start;     
+        margin-bottom: 133px;  
+    }
+    .elem3{
+        margin: 20px;
+        display: flex;
+        justify-content: start;     
+        margin-bottom: 133px;  
+    }
+    .wrapper_header{
+        display: 100%;
+        width: 1240px;
+        padding: 0 auto;   
+    }
+    .wrapper_footer{
+        display: 100%;
+        padding: auto;  
+        width: 1240px;  
+    }
+    .head_foto{ 
+        margin-right: 20px;  
+        margin-bottom: 20px; 
+    }
+    .oteli_html{
+        width: 1240px;
+    }
+}
+
+@media(max-width:1240px){
+    .logo{
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+    }
+    .main_menu{
+        display: flex;
+        flex-direction: row;
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+    .main_menu li{
+        margin-top: 10px;
+    }
+    .login{
+        margin-top: 10px;
+    }
+    .elem1{
         margin: 20px;
         display: flex;
         justify-content: start;     
